--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -20,12 +20,11 @@
         />
 
     <EditText
-        android:id="@+id/emailp"
+        android:id="@+id/name"
         android:layout_width="221dp"
         android:layout_height="wrap_content"
-        android:hint="@string/email"
-        android:autofillHints="emailAddress"
-        android:inputType="textEmailAddress"
+        android:hint="@string/usname"
+        android:autofillHints="username"
         android:minHeight="48dp"
         android:textAlignment="center"
         android:textColorHint="#757575"
@@ -39,9 +38,9 @@
         android:id="@+id/editText2"
         android:layout_width="219dp"
         android:layout_height="wrap_content"
-        android:hint="@string/password"
-        android:autofillHints="password"
-        android:inputType="textPassword"
+        android:hint="@string/email"
+        android:autofillHints="emailAddress"
+        android:inputType="textEmailAddress"
         android:minHeight="48dp"
         android:textAlignment="center"
         android:textColorHint="#757575"
