--- a/app/src/main/res/values-ta/string.xml
+++ b/app/src/main/res/values-ta/string.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">ஆண்ட்ராய்டு ஆய்வகங்கள்</string>
+    <string name="app_name">ஆண்ட்ராய்டு ஆய்வகங்கள் ஆய்வகங்கள்4</string>
     <string name="hello_message">முக்கியமான செயல்பாடு</string>
     <string name="profilename">சுயவிவர செயல்பாடு</string>
     <string name="ButtonText"> உள்நுழைய </string>
-    <string name="probutton">படம் எடு</string>
+    <string name="probutton">தரவை சேமிக்கவும்</string>
+    <string name="clear">தரவை அழிக்கவும்</string>
     <string name="CheckboxText">இதை முயற்சிக்கவும்</string>
     <string name="SwitchText">சொடுக்கி ஆன்/ஆஃப்</string>
     <string name="EditTextName">பெயரை இங்கே உள்ளிடவும் </string>
@@ -15,4 +16,5 @@
     <string name="undo">செயல்தவிர்</string>
     <string name="email">மின்னஞ்சலை பதிவுசெய்</string>
     <string name="password">உங்கள் கடவுச்சொல்லை உள்ளிடவும்</string>
+    <string name="address">உங்கள் முகவரியை உள்ளிடவும்</string>
 </resources>
