--- a/app/src/main/res/values-ta/string.xml
+++ b/app/src/main/res/values-ta/string.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">ஆண்ட்ராய்டு ஆய்வகங்கள் ஆய்வகங்கள் 5</string>
-    <string name="hello_message">முக்கியமான செயல்பாடு</string>
-    <string name="profilename">சுயவிவரசெயல்பாடு</string>
-    <string name="ButtonText"> உள்நுழைய </string>
+    <string name="app_name">ஆண்ட்ராய்டு ஆய்வகங்கள் ஆய்வகங்கள் 06</string>
+    <string name="time_text">நேரம் இங்கே செல்கிறது</string>
+    <string name="message_text">செய்தி இங்கே செல்கிறது</string>
+    <string name="send"> அனுப்பு </string>
     <string name="probutton">தரவை சேமிக்கவும்</string>
     <string name="clear">தரவை அழிக்கவும்</string>
     <string name="CheckboxText">இதை முயற்சிக்கவும்</string>
