--- a/app/src/main/res/layout/receive_message.xml
+++ b/app/src/main/res/layout/receive_message.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
-<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-
 
     <TextView
         android:id="@+id/message"
@@ -15,7 +11,7 @@
         android:layout_height="23dp"
         android:layout_marginStart="150dp"
         android:layout_marginTop="16dp"
-        android:text="@string/message_text"
+        android:text="Message goes here"
         android:textAlignment="viewEnd"
         android:textSize="18sp"
         android:visibility="visible"
@@ -29,7 +25,7 @@
         android:layout_width="120dp"
         android:layout_height="12dp"
         android:layout_marginTop="16dp"
-        android:text="@string/time_text"
+        android:text="Time goes here"
         android:textAlignment="viewEnd"
         android:textSize="10sp"
         android:textStyle="italic"
@@ -48,4 +44,3 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/receive_image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
