--- a/app/src/main/res/layout/sent_message.xml
+++ b/app/src/main/res/layout/sent_message.xml
@@ -10,7 +10,7 @@
         android:layout_width="190dp"
         android:layout_height="25dp"
         android:layout_marginTop="16dp"
-        android:text="@string/message_text"
+        android:text="Message goes here"
         android:textAlignment="viewStart"
         android:textSize="20sp"
         android:visibility="visible"
@@ -25,7 +25,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
-        android:text="@string/time_text"
+        android:text="Time goes here"
         android:textAlignment="viewStart"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
